# job_recruitment

./: .coveragerc  .gitignore  pyproject.toml
.github/workflows/: deploy.yml
api/: urls.py  views.py
app/: choices.py  urls.py  views.py
c_auth/: admin.py  models.py
c_auth/management/commands/: makesuper.py
c_auth/migrations/: 0001_initial.py
docs/: Job_Recruitment_business_model.docx  cmd.txt
employer/: admin.py  forms.py  models.py
employer/migrations/: 0001_initial.py
fixture/: board.json  country.json  course.json  designation.json  functional_area.json  language.json  preferred_location.json  role.json  school_medium.json  specialization.json  university_row.json
job/: admin.py  forms.py  models.py
job/migrations/: 0001_initial.py
job_recruitment/: .env.examp  asgi.py  settings.py  urls.py  wsgi.py
jobseeker/: admin.py  forms.py  models.py
jobseeker/migrations/: 0001_initial.py
primary_data/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
primary_data/migrations/: 0001_initial.py
snippet/: func_un.json  indexed_db_export.js  role_and_func_area_maping.py  role_un.json  skill_maping.py
